feature: hateoas