@@ -10,7 +10,7 @@ public class FotoProdutoNaoEncontradaException extends EntidadeNaoEncontradaExce
 	}
 	
 	public FotoProdutoNaoEncontradaException(Long restauranteId, Long produtoId) {
-		this(String.format("Não existe um cadastro de foto do produto com código %d para o restaurante de código %d",produtoId, restauranteId ));
+		this("Não existe um cadastro de foto do produto com código %d para o restaurante de código %d".formatted(produtoId, restauranteId));
 	}
 
 }
