@@ -10,7 +10,7 @@ public class PedidoNaoEncontradoException extends EntidadeNaoEncontradaException
 	
 	
 	public PedidoNaoEncontradoException (String codigoPedido) {
-		super(String.format("Não existe um pedido com código %s", codigoPedido));
+		super("Não existe um pedido com código %s".formatted(codigoPedido));
 	}
 
 }
