@@ -10,7 +10,7 @@ public class RestauranteNaoEncontradoException extends EntidadeNaoEncontradaExce
 	
 	public RestauranteNaoEncontradoException(Long restauranteId) {
 		
-		this(String.format("Não existe um cadastro de restaurante com o código %d", restauranteId));
+		this("Não existe um cadastro de restaurante com o código %d".formatted(restauranteId));
 	}
 
 	
